Kubernetes-Manifest-Files/Frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: cda
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
